--- a/TODO
+++ b/TODO
@@ -10,42 +10,41 @@ Web Page Project:
     ☐ Copy Write Services Section @low @45minutes
     ☐ copy write parallax (best friend's new best friend, complimentary meet and greet) @low @45minutes
     ☐ copy write why choose cards @low @30minutes
-    ✔ copy write footer content @30m @done(19-04-15 21:34)
-    ✔ fade in text and cards for movement @3hours @done(19-04-15 21:34)
-    ✔ smooth out animation for testimonials @15minutes @started(19-04-16 08:09) @done(19-04-16 08:48) @lasted(39m6s)
     ☐ Link Hyperlinks (nav bar, buttons[5], gallery, testimonial[more]) @low @30m
-    Make Home Page Mobile Friendly:
-      ✔ Resize jumbotron carousel images for mobile @30minutes @started(19-04-16 09:18) @done(19-04-16 10:17) @lasted(59m52s)
-      ✔ Move Jumbotron Text Down; Increase Text Size @20minutes @started(19-04-16 10:20) @done(19-04-16 10:49) @lasted(29m15s)
-      ✔ Reduce Text Size On Button; Reduce Padding?; Even Out Button Vertically @20minutes @started(19-04-16 10:49) @done(19-04-16 10:52) @lasted(3m56s)
-      ✔ Move About Us Down; Stack About Us Text On Top Of Picture; Make About Us Divs Full Width @50minutes @started(19-04-17 09:06) @done(19-04-17 09:28) @lasted(22m19s)
-      ✔ Increase Size of Services Title @high @5m @started(19-04-17 09:28) @done(19-04-17 09:30) @lasted(2m10s)
-      ✔ Reduce Distance Between Services Title And First Icon @high  @5m @started(19-04-17 09:35) @done(19-04-17 09:37) @lasted(2m36s)
-      ✔ Reduce The Font Size of Services Main Text And Widen The Side Margins @high @20m @started(19-04-17 09:37) @done(19-04-17 09:41) @lasted(4m24s)
-      ✔ Increase Distance Between Service Cards @high  @10m @started(19-04-17 09:41) @done(19-04-17 09:41) @lasted(44s)
-      ✔ Increase Font Size On Parallax Main Text; Make Main Text Div Wider @high @30m @started(19-04-17 09:46) @done(19-04-17 09:47) @lasted(1m10s)
-      ✔ Stack Why Choose Cards On Top Of Each Other; Make The Cards Full Width @high @15m @started(19-04-17 09:47) @done(19-04-17 10:07) @lasted(20m58s) 
-        Testimonial:
-        ✔ Only Have One Testimonial On Screen At Once @high @45m @started(19-04-19 21:18) @done(19-04-19 22:03) @lasted(45m12s)
-        ✔ Remove Indicators, Add Arrows @high @30m @started(19-04-19 22:03) @done(19-04-19 22:03) @lasted(21s)
-        ✔ Change BG Color Of Each Testimonial To Gradient @high @15m @started(19-04-19 22:44) @done(19-04-19 22:44) @lasted(4s)
-        ✔ Fix Testimonial on Mobile @critical @30m @started(19-04-19 22:03) @done(19-04-19 22:41) @lasted(38m24s)
-      ✔ Stack Gallery Pictures Full Screen @high @30m @started(19-04-20 09:20) @done(19-04-20 09:29) @lasted(9m14s)
-      ✔ Modify Gallery BG Size @high @10m @started(19-04-20 09:36) @done(19-04-20 09:37) @lasted(1m38s)
-      ✔ Reduce Contact Us Title's Font Size @high @10m @started(19-04-20 09:41) @done(19-04-20 09:41) @lasted(8s)
-      ✔ Increase Contact Us Main Text Font Size @high @10m @started(19-04-20 09:41) @done(19-04-20 09:42) @lasted(1m29s)
-      ✔ Decrease Contact Us Button's Font Size; Reduce Padding? @high @15m @started(19-04-20 09:43) @done(19-04-20 09:43) @lasted(35s)
-      ✔ Horizontally Align Social Media Icons In Footer @high @15m @started(19-04-20 09:43) @done(19-04-20 09:54) @lasted(11m35s)
-      ✔ Lower The Content Break In The Footer Below Social Media Icons @high @10m @started(19-04-20 09:54) @done(19-04-20 09:54) @lasted(44s)
+    ✔ Speed up transition on gallery @high @15m @started(19-04-22 10:10) @done(19-04-22 10:14) @lasted(4m1s)
+    ✔ Make "More Photos" on gallery one line @high @10m @started(19-04-22 10:16) @done(19-04-22 10:16) @lasted(38s)
+    ✔ increase font size on "more" button (testimonials) @high @10m @started(19-04-22 10:16) @done(19-04-22 10:19) @lasted(3m34s)
+    Services:
+       ✔ Move Services title up @high @10m @started(19-04-22 10:19) @done(19-04-22 10:23) @lasted(4m57s)
+       ✔ Increase Services title font size @high @10m @started(19-04-22 10:25) @done(19-04-22 10:25) @lasted(39s)
+    ✔ Change Parallax Title to white @high @5m @started(19-04-22 10:25) @done(19-04-22 10:26) @lasted(1m42s)
+    ✔ Increase gap between gallery and contact section @high @15m @started(19-04-22 10:26) @done(19-04-22 10:28) @lasted(2m1s)
+    ✔ Increase font size on Contact main text @high @5m @started(19-04-22 10:29) @done(19-04-22 10:30) @lasted(1m24s)
+    ✔ fix gap on gallery @high @20m @started(19-04-22 10:30) @done(19-04-22 10:31) @lasted(1m14s)
 
-  About Us Page:
 
-  Services Page: 
-
-  Let's Meet Page:
-
-  Our Friends Page:
-
-  F.A.Q. Page:
-
-  Contact Us Page:
+Archive:
+  ✔ copy write footer content @30m @done(19-04-15 21:34)  @project(Web Page Project.Home Page)
+  ✔ fade in text and cards for movement @3hours @done(19-04-15 21:34) @project(Web Page Project.Home Page)
+  ✔ smooth out animation for testimonials @15minutes @started(19-04-16 08:09) @done(19-04-16 08:48) @lasted(39m6s) @project(Web Page Project.Home Page)
+  ✔ Resize jumbotron carousel images for mobile @30minutes @started(19-04-16 09:18) @done(19-04-16 10:17) @lasted(59m52s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Move Jumbotron Text Down; Increase Text Size @20minutes @started(19-04-16 10:20) @done(19-04-16 10:49) @lasted(29m15s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Reduce Text Size On Button; Reduce Padding?; Even Out Button Vertically @20minutes @started(19-04-16 10:49) @done(19-04-16 10:52) @lasted(3m56s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Move About Us Down; Stack About Us Text On Top Of Picture; Make About Us Divs Full Width @50minutes @started(19-04-17 09:06) @done(19-04-17 09:28) @lasted(22m19s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Increase Size of Services Title @high @5m @started(19-04-17 09:28) @done(19-04-17 09:30) @lasted(2m10s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Reduce Distance Between Services Title And First Icon @high  @5m @started(19-04-17 09:35) @done(19-04-17 09:37) @lasted(2m36s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Reduce The Font Size of Services Main Text And Widen The Side Margins @high @20m @started(19-04-17 09:37) @done(19-04-17 09:41) @lasted(4m24s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Increase Distance Between Service Cards @high  @10m @started(19-04-17 09:41) @done(19-04-17 09:41) @lasted(44s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Increase Font Size On Parallax Main Text; Make Main Text Div Wider @high @30m @started(19-04-17 09:46) @done(19-04-17 09:47) @lasted(1m10s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Stack Why Choose Cards On Top Of Each Other; Make The Cards Full Width @high @15m @started(19-04-17 09:47) @done(19-04-17 10:07) @lasted(20m58s)  @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Only Have One Testimonial On Screen At Once @high @45m @started(19-04-19 21:18) @done(19-04-19 22:03) @lasted(45m12s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Remove Indicators, Add Arrows @high @30m @started(19-04-19 22:03) @done(19-04-19 22:03) @lasted(21s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Change BG Color Of Each Testimonial To Gradient @high @15m @started(19-04-19 22:44) @done(19-04-19 22:44) @lasted(4s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Fix Testimonial on Mobile @critical @30m @started(19-04-19 22:03) @done(19-04-19 22:41) @lasted(38m24s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Stack Gallery Pictures Full Screen @high @30m @started(19-04-20 09:20) @done(19-04-20 09:29) @lasted(9m14s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Modify Gallery BG Size @high @10m @started(19-04-20 09:36) @done(19-04-20 09:37) @lasted(1m38s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Reduce Contact Us Title's Font Size @high @10m @started(19-04-20 09:41) @done(19-04-20 09:41) @lasted(8s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Increase Contact Us Main Text Font Size @high @10m @started(19-04-20 09:41) @done(19-04-20 09:42) @lasted(1m29s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Decrease Contact Us Button's Font Size; Reduce Padding? @high @15m @started(19-04-20 09:43) @done(19-04-20 09:43) @lasted(35s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Horizontally Align Social Media Icons In Footer @high @15m @started(19-04-20 09:43) @done(19-04-20 09:54) @lasted(11m35s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
+  ✔ Lower The Content Break In The Footer Below Social Media Icons @high @10m @started(19-04-20 09:54) @done(19-04-20 09:54) @lasted(44s) @project(Web Page Project.Home Page.Make Home Page Mobile Friendly)
