Created The Boiler Plate For About Us And Modified Old Comments On Index

--- a/TODO
+++ b/TODO
@@ -22,6 +22,9 @@ Web Page Project:
     ✔ Increase font size on Contact main text @high @5m @started(19-04-22 10:29) @done(19-04-22 10:30) @lasted(1m24s)
     ✔ fix gap on gallery @high @20m @started(19-04-22 10:30) @done(19-04-22 10:31) @lasted(1m14s)
 
+  About Us Page:
+    ☐ Create new javascript file with the navbar movement included @high @5m
+
 
 Archive:
   ✔ copy write footer content @30m @done(19-04-15 21:34)  @project(Web Page Project.Home Page)
