Finished About Us Basic Content

--- a/TODO
+++ b/TODO
@@ -23,7 +23,8 @@ Web Page Project:
     ✔ fix gap on gallery @high @20m @started(19-04-22 10:30) @done(19-04-22 10:31) @lasted(1m14s)
 
   About Us Page:
-    ☐ Create new javascript file with the navbar movement included @high @5m
+    ✔ Create new javascript file with the navbar movement included @high @5m @started(19-04-28 12:17) @done(19-04-28 12:17) @lasted(49s)
+  
 
 
 Archive:
