--- a/TODO
+++ b/TODO
@@ -23,7 +23,7 @@ Web Page Project:
     ☐ Copy write Mission Statement @low @60m @Ash 
     ☐ Copy write My Story Card @low @60m @Ash
     ☐ Copy write animal descriptions in gallery @low @45m @Ash
-    ☐ Add transitions @high @2h @Nate
+    ☐ Add transitions @high @2h @Nate @started(20-03-25 14:45)
     Make Mobile Responsive:
 
   Services and Rates Page:
